<resources>
    <string name="app_name">ComicsWorld</string>
    <string name="title_activity_home_screen">ComicsWorld</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Fivesecond</string>
    <string name="nav_header_subtitle">fivesecond.it.dut.comicsworld</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="type_header">Action</string>
    <string name="top">Top</string>
    <string name="popular">Popular</string>
    <string name="rated">Rated</string>

    <string name="logo">Comics World</string>

    <string name="hint_email_phone">Email</string>


    <string name="searchTitle">Search</string>
    <string name="start_reading"> START EXPLORING </string>
    <string name="search_for">Search for</string>
    <string name="no_result">No result for</string>
    <string name="next">next</string>
    <string name="pre">pre</string>
    <string name="continue_reading">Continue reading</string>

    <string name="Not_Login">Not member. Register now! </string>
    <string name="Not_Register">Already register. Login now! </string>
    <string name="text_register">Register </string>
    <string name="text_login">Login </string>
    <string name="text_reset">Reset </string>
    <string name="hint_confirmpass">Confirm password</string>
    <string name="hint_pass">Password</string>

    <string name="back">Back </string>
    <string name="Forgot">Forgot password?</string>
    <string name="Note">We just need your registered Email Id to sent you password reset instructions. </string>
    <string name="save">Save change</string>

    <string name="change_language">Select Language</string>

    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="title_dialog_main">Select language</string>

    <string name="new_update"> New update</string>
    <string name="top_rating">Top rating</string>

    <string name="home">Home</string>
    <string name="type">Type</string>
    <string name="loved">Loved</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="change_lang">Language</string>

    <string name="rate">Rate</string>
    <string name="read">Read</string>

    <string name="chapter">Chapter</string>
    <string name="des">Description: </string>

    <string name="set_user">Set user name: </string>
    <string name="update_profile">User profile updated successfully! </string>
    <string name="select_img">Select photo </string>
    <string name="uploading">Uploading...</string>
    <string name="uploaded">Uploaded</string>
    <string name="failed">Failed</string>
    <string name="submit">Submit</string>
    <string name="toast_begin">You have just rated </string>
    <string name="toast_end"> start(s)for this comic</string>
    <string name="toast_rating">Please login before rating me</string>
    <string name="toast_cmt">Please login to comment</string>
    <string name="delete_cmt">Delete comment successfully</string>

    <string name="input_again_pass">Password too short, enter minimum 6 characters!</string>
    <string name="input_email">Enter email</string>
    <string name="input_password">Enter password</string>
    <string name="wait">Please wait...</string>
    <string name="login_successfully">Log in successfull!</string>
    <string name="login_fail">Log in failed!</string>

    <string name="processing">Processing...</string>
    <string name="message_faile">Failed to send reset email!</string>
    <string name="message">We have sent you instructions to reset your password!</string>
    <string name="email_requried">Email is requried !</string>
    <string name="password_requried">Password is requried !</string>
    <string name="password_confirm_requried">Confirm password is requried !</string>
    <string name="password_same_requried">Enter password same above !</string>
    <string name="register">Register successfull!</string>
    <string name="register_faile">Register faile!</string>
    <string name="love">love</string>
    <string name="loved_btn">Loved</string>

    <string name="view_cmt">view comments</string>
    <string name="love_toast">Please login to save this comic</string>
    <string name="love_succ">Add to loved list comics successfully</string>
    <string name="love_rm">Remove from loved list comics successfully</string>
    <string name="loved_comics">Loved comics</string>
    <string name="anonymous">Anonymous</string>

    <string name="no_continue">No, thanks</string>
    <string name="yes_continue">Go now</string>

    <string name="hint_cmt">Add new comment...</string>
    <string name="add">POST</string>
    <string name="disable_cmt">Please login to comment..</string>


</resources>
