<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTopic"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_logo"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginLeft="@dimen/edt_margin_left"
        android:layout_marginRight="@dimen/edt_margin_right"
        android:text="@string/logo"
        android:textSize="@dimen/logo"
        android:textStyle="bold"
        android:textColor="@color/textCommics"
        android:gravity="center"/>

    <TextView
        android:id="@+id/txtFg"
        android:layout_below="@+id/txtTopic"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_reset"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/margin_read"
        android:textSize="@dimen/size_forgot"
        android:text="@string/Forgot"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_below="@+id/txtFg"
        android:id="@+id/txtNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_read"
        android:gravity="center_horizontal"
        android:padding="@dimen/margin_read"
        android:text="@string/Note"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size" />


    <EditText
        android:id="@+id/edt_email"
        android:layout_below="@id/txtNote"
        android:layout_margin="@dimen/edt_margin_left"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_text"
        android:textSize="@dimen/margin_right_read_lend"
        android:hint="@string/hint_email_phone"
        android:padding="@dimen/text_padding"
        android:background="@drawable/round_border_edit_button"
        android:textColor="@color/black" />

    <Button
        android:layout_below="@id/edt_email"
        android:id="@+id/btnReset"
        android:layout_width="@dimen/with_reset"
        android:layout_height="@dimen/height_reset"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/edt_margin_bottom"
        android:layout_marginLeft="@dimen/edt_margin_left"
        android:layout_marginRight="@dimen/edt_margin_right"
        android:layout_marginTop="@dimen/edt_margin_top"
        android:paddingLeft="@dimen/edt_margin_bottom"
        android:paddingRight="@dimen/edt_margin_bottom"
        android:text="@string/text_reset"
        android:textSize="@dimen/size_main"
        android:textStyle="bold"
        android:background="@drawable/round_border_edit_button"
        android:textColor="@color/colorPrimaryDark"/>

    <Button
        android:layout_below="@+id/btnReset"
        android:id="@+id/btnBack"
        android:layout_width="@dimen/with_button_login"
        android:layout_height="@dimen/height_button_Login"
        android:layout_marginTop="@dimen/margin_read"
        android:textSize="@dimen/text_size_back"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:text="@string/back"
        android:textColor="@color/textCommics" />

</RelativeLayout>
