<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTopic"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height"
        android:layout_marginBottom="@dimen/edt_margin_bottom"
        android:layout_marginLeft="@dimen/edt_margin_left"
        android:layout_marginRight="@dimen/edt_margin_right"
        android:layout_marginTop="@dimen/mar_top_logo"
        android:padding = "@dimen/padding_topic"
        android:text="@string/logo"
        android:textSize="@dimen/text_size_logo_main"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"/>

    <Button
        android:layout_above="@id/btnChange"
        android:id="@+id/btnContinue"
        android:layout_width="@dimen/large_button"
        android:layout_height="@dimen/height_button"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border_btn_start"
        android:text="@string/continue_reading"
        android:textColor="@color/bgHeader"
        android:textSize="@dimen/text_size_start"
        android:padding="@dimen/padding_start"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/above_marginBottom"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btnChange"
        android:layout_width="@dimen/large_button"
        android:layout_height="@dimen/height_button"
        android:layout_above="@+id/btnStart"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/above_marginBottom"
        android:background="@drawable/border_btn_start"
        android:padding="@dimen/padding_start"
        android:text="@string/change_language"
        android:textColor="@color/bgHeader"
        android:textSize="@dimen/text_size_start"
        android:textStyle="bold" />


    <Button
        android:id="@+id/btnStart"
        android:layout_width="@dimen/large_button"
        android:layout_height="@dimen/height_button"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:background="@drawable/border_btn_start"
        android:padding="@dimen/padding_start"
        android:text="@string/start_reading"
        android:textColor="@color/bgHeader"
        android:textSize="@dimen/text_size_start"
        android:textStyle="bold" />

</RelativeLayout>