<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTopic"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_logo"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginLeft="@dimen/edt_margin_left"
        android:layout_marginRight="@dimen/edt_margin_right"
        android:text="@string/logo"
        android:textSize="@dimen/logo"
        android:textStyle="bold"
        android:textColor="@color/textCommics"
        android:gravity="center"/>

    <EditText
        android:id="@+id/edt_email"
        android:layout_below="@id/txtTopic"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginLeft="@dimen/edt_margin_left"
        android:layout_marginRight="@dimen/edt_margin_right"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_text"
        android:textSize="@dimen/margin_right_read_lend"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email_phone"
        android:padding="@dimen/text_padding"
        android:background="@drawable/round_border_edit_button"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/edt_pass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_text"
        android:layout_below="@id/edt_email"
        android:layout_marginLeft="@dimen/edt_margin_left"
        android:layout_marginTop="12dp"
        android:layout_marginRight="@dimen/edt_margin_right"
        android:layout_marginBottom="@dimen/margin_small"
        android:background="@drawable/round_border_edit_button"
        android:hint="@string/hint_pass"
        android:inputType="textPassword"
        android:padding="@dimen/text_padding"
        android:textColor="@color/black"
        android:textSize="@dimen/margin_right_read_lend" />

    <EditText
        android:layout_below="@id/edt_pass"
        android:id="@+id/edtConfirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_text"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginLeft="@dimen/edt_margin_left"
        android:layout_marginRight="@dimen/edt_margin_right"
        android:layout_marginTop="@dimen/margin_small"
        android:inputType="textPassword"
        android:textSize="@dimen/margin_right_read_lend"
        android:background="@drawable/round_border_edit_button"
        android:hint="@string/hint_confirmpass"
        android:padding="@dimen/text_padding"
        android:textColor="@color/black" />

    <Button
        android:layout_below="@id/edtConfirm"
        android:id="@+id/btnRegister"
        android:layout_width="@dimen/with_button_register"
        android:layout_height="@dimen/height_button_Login"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/edt_margin_left"
        android:layout_marginRight="@dimen/edt_margin_right"
        android:layout_marginTop="@dimen/edt_margin_top"
        android:paddingLeft="@dimen/edt_margin_bottom"
        android:paddingRight="@dimen/edt_margin_bottom"
        android:text="@string/text_register"
        android:textSize="@dimen/size_main"
        android:textStyle="bold"
        android:background="@drawable/round_border_edit_button"
        android:textColor="@color/colorPrimaryDark"/>

    <Button
        android:layout_below="@id/btnRegister"
        android:id="@+id/btnForgot"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_buton"
        android:textSize="@dimen/size_authur"
        android:background="@null"
        android:text="Forgot password?"
        android:textAllCaps="false"
        android:textColor="@color/textCommics" />

    <Button
        android:layout_below="@id/btnForgot"
        android:id="@+id/btnLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_authur"
        android:layout_marginTop="@dimen/margin_top_buton_register"
        android:background="@null"
        android:text="@string/Not_Register"
        android:textAllCaps="false"
        android:textColor="@color/textCommics" />

</RelativeLayout>
