<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/imv_fb"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginBottom="@dimen/edt_margin_bottom"
        android:layout_marginLeft="@dimen/edt_margin_left"
        android:layout_marginRight="@dimen/edt_margin_right"
        android:layout_marginTop="40dp"
        android:text="@string/logo"
        android:textSize="@dimen/logo"
        android:textStyle="bold"
        android:textColor="@color/text_Commics"
        android:gravity="center"/>

    <EditText
        android:id="@+id/edt_email"
        android:layout_below="@id/imv_fb"
        android:layout_marginBottom="@dimen/edt_margin_bottom"
        android:layout_marginLeft="@dimen/edt_margin_left"
        android:layout_marginRight="@dimen/edt_margin_right"
        android:layout_marginTop="@dimen/edt_margin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email_phone"
        android:padding="@dimen/text_padding"
        android:background="@drawable/round_border_edit_button"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/edt_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_email"
        android:layout_marginBottom="@dimen/edt_margin_bottom"
        android:layout_marginLeft="@dimen/edt_margin_left"
        android:layout_marginRight="@dimen/edt_margin_right"
        android:layout_marginTop="@dimen/edt_margin_top"
        android:background="@drawable/round_border_edit_button"
        android:hint="@string/hint_pass"
        android:padding="@dimen/text_padding"
        android:textColor="@color/black" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/edt_margin_bottom"
        android:layout_marginLeft="@dimen/edt_margin_left"
        android:layout_marginRight="@dimen/edt_margin_right"
        android:layout_marginTop="@dimen/edt_margin_top"
        android:text="@string/text_login"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/round_border_edit_button"
        android:textColor="@color/black"/>




</RelativeLayout>
