<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListComicsActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_header"
        android:background="@color/bgHeader"
        android:paddingLeft="@dimen/padding_header"
        android:paddingRight="@dimen/padding_header">

        <ImageView
            android:layout_width="@dimen/menu_header"
            android:layout_height="@dimen/menu_header"
            android:src="@drawable/menu_icon"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/type_header"
            android:gravity="center_vertical"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:textSize="@dimen/type_header"
            android:textColor="#ffffff" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="@dimen/search_header"
                android:layout_height="@dimen/search_header"
                android:src="@drawable/search_icon"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/margin_search_user"/>
            <ImageView
                android:layout_width="@dimen/user_header"
                android:layout_height="@dimen/user_header"
                android:src="@drawable/user_icon"
                android:layout_alignParentRight="true"/>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="@dimen/padding_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_bar"
            android:layout_marginRight="@dimen/margin_bar"
            android:layout_marginBottom="@dimen/margin_bar">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top"
                android:layout_alignParentLeft="true"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_bar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular"
                android:layout_centerInParent="true"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_bar"
                android:textColor="@color/bgHeader"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rated"
                android:layout_alignParentRight="true"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_bar"/>
        </RelativeLayout>

        <ListView
            android:id="@+id/lvListComic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></ListView>




    </LinearLayout>

</LinearLayout>