<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_list_comic"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_read"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainContentActivity"
    tools:showIn="@layout/app_read">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="9">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_marginTop="@dimen/edt_margin_top"
            android:orientation="horizontal"
            android:weightSum="8">
            <ImageView
                android:id="@+id/imvCover"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:layout_marginLeft="@dimen/edt_margin_top"
                android:layout_marginRight="@dimen/edt_margin_top"
                android:scaleType="centerCrop"/>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="16"
                android:layout_weight="5">

                <TextView
                    android:id="@+id/txtNameComic"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="6.5"
                    android:text="Conan Chapter 1"
                    android:textColor="@android:color/background_dark"
                    android:textSize="@dimen/size_comic"
                    android:textStyle="bold"
                    android:maxLines="2"/>

                <TextView
                    android:layout_marginTop="@dimen/margin_top_tacgia"
                    android:id="@+id/txtAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:text="Aoyama Gōshō"
                    android:textColor="@android:color/background_dark"
                    android:textSize="@dimen/size_authur"
                    android:textStyle="bold" />

                <RatingBar
                    android:id="@+id/raBar"
                    style="@style/Widget.AppCompat.RatingBar.Indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="3.5"
                    android:numStars="5"
                    android:onClick="dialogRate"
                    android:rating="2"/>

                <LinearLayout
                    android:layout_marginTop="@dimen/margin_read"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:weightSum="9">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="@dimen/height_button_read"
                        android:layout_gravity="center"
                        android:layout_weight="3"
                        android:layout_marginRight="@dimen/margin_right_button"
                        android:text="@string/rate"
                        android:textSize="@dimen/size_button"
                        android:textStyle="bold"
                        android:onClick="dialogRate"
                        android:textColor="#fff"
                        android:background="@color/bgHeader"
                        />
                    <Button
                        android:id="@+id/btnRead"
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="@dimen/height_button_read"
                        android:layout_marginRight="@dimen/margin_right_button"
                        android:layout_gravity="center"
                        android:text="@string/read"
                        android:textSize="@dimen/size_button"
                        android:textStyle="bold"
                        android:textColor="#fff"
                        android:background="@color/bgHeader"
                        />

                    <Button
                        android:id="@+id/btnLove"
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="@dimen/height_button_read"
                        android:layout_marginRight="3dp"
                        android:layout_gravity="center"
                        android:text="@string/love"
                        android:textSize="@dimen/size_button"
                        android:textStyle="bold"
                        android:textColor="#fff"
                        android:onClick="loved"
                        android:background="@color/bgHeader"
                        />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/txtContent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/edt_margin_right"
                    android:layout_marginLeft="@dimen/edt_margin_left"
                    android:layout_marginRight="@dimen/edt_margin_right"
                    android:layout_marginStart="@dimen/edt_margin_left"
                    android:layout_marginTop="@dimen/edt_margin_top"
                    android:text="@string/des"
                    android:textColor="@android:color/background_dark"
                    android:textSize="@dimen/size_discrip" />
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/txtComent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/edt_margin_right"
                    android:layout_marginLeft="@dimen/edt_margin_left"
                    android:layout_marginRight="@dimen/edt_margin_right"
                    android:layout_marginStart="@dimen/edt_margin_left"
                    android:layout_marginTop="@dimen/edt_margin_top"
                    android:gravity="right"
                    android:text="@string/view_cmt"
                    android:onClick="addComment"
                    android:textStyle="italic"
                    android:textColor="@android:color/background_dark"
                    android:textSize="@dimen/size_discrip" />
            </LinearLayout>
            <TextView
                android:id="@+id/txt_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/edt_margin_left"
                android:layout_marginRight="@dimen/edt_margin_right"
                android:gravity="center_vertical"
                android:textSize="@dimen/size_main"
                android:maxLines="6"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="@dimen/edt_margin_right"
                android:layout_marginLeft="@dimen/edt_margin_left"
                android:layout_marginRight="@dimen/edt_margin_right"
                android:layout_marginStart="@dimen/edt_margin_left"
                android:layout_marginTop="@dimen/edt_margin_top">

                <TextView
                    android:layout_marginBottom="@dimen/layout_margin_read"
                    android:id="@+id/txt_chap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/background_dark"
                    android:textSize="@dimen/size_discrip" />

                <ListView
                    android:id="@+id/lvChap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:dividerHeight="1px"
                    android:textSize="20sp">
                </ListView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>